# checkers

./: CMakeLists.txt  main.cpp
SequenceDiagram/: communication_with_rabitMQ_sequence.mdj
exceptions/include/: unright_color_exception.hpp
exceptions/src/: unright_color_exception.cpp
game/: CMakeLists.txt  config.hpp
game/exceptions/: CMakeLists.txt
game/exceptions/include/: wrong_checker_move_exception.hpp
game/exceptions/src/: wrong_checker_move_exception.cpp
game/game_field/: CMakeLists.txt
game/game_field/include/: checker.hpp  checker_queen.hpp  game_checkers.hpp  game_field.hpp  ifigure.hpp
game/game_field/src/: checker.cpp  checker_queen.cpp  game_checkers.cpp  game_field.cpp  ifigure.cpp
game/include/: game_field.hpp  igame.hpp
game/player/: CMakeLists.txt
game/player/include/: player.hpp  player_info.hpp
game/player/src/: player.cpp  player_info.cpp
game/src/: checker.cpp  game_field.cpp  ifigure.cpp
logger/: CMakeLists.txt
logger/include/: logger.hpp
logger/src/: logger.cpp
